Implement daytime tcp server

--- a/intro/Makefile
+++ b/intro/Makefile
@@ -6,3 +6,6 @@ all:	${PROGS}
 
 daytimetcpcli: daytimetcpcli.o
 	${CC} ${CFLAGS} -o $@ daytimetcpcli.o ${LIBS}
+
+daytimetcpsrv: daytimetcpsrv.o
+	${CC} ${CFLAGS} -o $@ daytimetcpsrv.o ${LIBS}
